# AllureGraph-AI

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
api/: main.py  requirements-render.txt  requirements.txt
api/static/: index.html
core/: __init__.py  billing.py  database.py  engine.py  intelligence.py  lite_engine.py  rate_limiter.py  tasks.py  templates.py  webhooks.py
dashboard/: index.html  package.json  tailwind.config.js
dashboard/src/: App.tsx  index.css
dashboard/src/components/: Layout.tsx
dashboard/src/pages/: ApiKeys.tsx  Dashboard.tsx  Landing.tsx  Monitor.tsx  Scraper.tsx  Templates.tsx  Usage.tsx
scripts/: setup.sh
tests/: test_billing.py  test_engine.py  test_templates.py
